fixing contrast issues

--- a/Project/styles/base.css
+++ b/Project/styles/base.css
@@ -1,7 +1,7 @@
 :root {
-    --color-primary: #7F5539;
+    --color-primary: #60422d;
     --color-secondary: #A68A64;
-    --color-contrast: #656D4A;
+    --color-contrast: #545b3e;
     --color-background: #FAF8F4;
     --color-text: #414833;
 }
